After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 587088 - gnome-session-2.26.1: build failure on systems without execinfo
gnome-session-2.26.1: build failure on systems without execinfo
Status: RESOLVED FIXED
Product: gnome-session
Classification: Core
Component: general
2.26.x
Other All
: Normal normal
: ---
Assigned To: Session Maintainers
Session Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-06-26 19:51 UTC by Alexis Ballier
Modified: 2009-06-29 21:31 UTC
See Also:
GNOME target: ---
GNOME version: 2.25/2.26


Attachments
fix (2.56 KB, patch)
2009-06-26 19:52 UTC, Alexis Ballier
committed Details | Review

Description Alexis Ballier 2009-06-26 19:51:48 UTC
Please describe the problem:
On, e.g., FreeBSD, we don't have execinfo.h but it is used unconditionally in gnome-session/gdm-signal-handler.c. However a port exists but requires extra linking as the backtrace stuff is not in the libc. A patch will follow, checking for execinfo.h and then if extra linking is needed.

Steps to reproduce:
1. 
2. 
3. 


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Alexis Ballier 2009-06-26 19:52:15 UTC
Created attachment 137439 [details] [review]
fix
Comment 2 Daniel Macks 2009-06-27 19:57:01 UTC
OS X didn't get backtrace() until 10.5, so the ability to check for its presence (and avoid using it if not available) is good for me too. The fink packaging of gnome-session has just patched it out rather than test-and-#ifdef with no ill effect. It's just one of several ways g-s tries to handle the situation, not a critical or "must-have" part.
Comment 3 Vincent Untz 2009-06-29 21:31:52 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.