[build] Fix build on systems without execinfo

See if execinfo.h is available, and if we need to link to an extra
library to use it.

For instance, FreeBSD does not have execinfo.h by default but a
libexecinfo library has been created.

http://bugzilla.gnome.org/show_bug.cgi?id=587088